--- a/lute/templates/book/tablelisting.html
+++ b/lute/templates/book/tablelisting.html
@@ -32,6 +32,7 @@
       searching: true,
       processing: true,
       serverSide: true,
+      stateSave: true,
       search: { search: initial_search },
       columnDefs: [
         {
