--- a/lute/templates/read/index.html
+++ b/lute/templates/read/index.html
@@ -24,6 +24,22 @@
     <!-- Lacking css skills, so table layout to the rescue. -->
     <table style="width: 100%">
       <tr>
+        <td>
+          <div id="menuToggle">
+            <input type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
+
+            <ul id="menu">
+              <li>Home</li>
+              <li>About</li>
+              <li>Info</li>
+              <li>Contact</li>
+            </ul>
+
+          </div>
+        </td>
         <td width="2px">
           <img
             src="{{ url_for('static', filename='img/lute.png') }}"
@@ -149,41 +165,6 @@
   </div>
 
   <h2 id="thetexttitle">{{ book.title }}</h2>
-
-  <!--    Made by Erik Terwan    -->
-<!--   24th of November 2015   -->
-<!--        MIT License        -->
-<nav role="navigation">
-  <div id="menuToggle">
-    <!--
-    A fake / hidden checkbox is used as click reciever,
-    so you can use the :checked selector on it.
-    -->
-    <input type="checkbox" />
-    
-    <!--
-    Some spans to act as a hamburger.
-    
-    They are acting like a real hamburger,
-    not that McDonalds stuff.
-    -->
-    <span></span>
-    <span></span>
-    <span></span>
-    
-    <!--
-    Too bad the menu has to be inside of the button
-    but hey, it's pure CSS magic.
-    -->
-    <ul id="menu">
-      <a href="#"><li>Home</li></a>
-      <a href="#"><li>About</li></a>
-      <a href="#"><li>Info</li></a>
-      <a href="#"><li>Contact</li></a>
-      <a href="https://erikterwan.com/" target="_blank"><li>Show me more</li></a>
-    </ul>
-  </div>
-</nav>
 
   <div id="thetext" {% if is_rtl %}dir="rtl" {% endif %}>
     ...
