--- a/lute/static/css/styles.css
+++ b/lute/static/css/styles.css
@@ -10,6 +10,7 @@ body
     font: 100%/1.25 "Lucida Grande",Arial,sans-serif,STHeiti,"Arial Unicode MS",MingLiu;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 /* Main container div for Lute site content. */
@@ -222,31 +223,20 @@ div#reading-header {
 
 #menuToggle
 {
-  display: block;
-  position: relative;
-  top: 50px;
-  left: 50px;
-  
   z-index: 1;
-  
   -webkit-user-select: none;
   user-select: none;
 }
 
 #menuToggle input
 {
-  display: block;
-  width: 40px;
-  height: 32px;
   position: absolute;
-  top: -7px;
-  left: -5px;
-  
+  display: block;
+  width: 20px;
+  height: 20px;
   cursor: pointer;
-  
   opacity: 0; /* hide this */
   z-index: 2; /* and place it over the hamburger */
-  
   -webkit-touch-callout: none;
 }
 
@@ -255,60 +245,15 @@ div#reading-header {
  */
 #menuToggle span
 {
-  display: block;
   width: 20px;
   height: 4px;
+  margin-left: 3px;
   margin-bottom: 3px;
-  position: relative;
-  
-  background: #cdcdcd;
+  background: grey;
   border-radius: 3px;
-  
   z-index: 1;
-  
-  transform-origin: 4px 0px;
-  
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              opacity 0.55s ease;
-}
-
-#menuToggle span:first-child
-{
-  transform-origin: 0% 0%;
-}
-
-#menuToggle span:nth-last-child(2)
-{
-  transform-origin: 0% 100%;
-}
-
-/* 
- * Transform all the slices of hamburger
- * into a crossmark.
- */
-#menuToggle input:checked ~ span
-{
-  opacity: 1;
-  transform: rotate(45deg) translate(-2px, -1px);
-  background: #232323;
-}
-
-/*
- * But let's hide the middle one.
- */
-#menuToggle input:checked ~ span:nth-last-child(3)
-{
-  opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-/*
- * Ohyeah and the last one should go the other direction
- */
-#menuToggle input:checked ~ span:nth-last-child(2)
-{
-  transform: rotate(-45deg) translate(0, -1px);
+  position: relative;
+  display: block;
 }
 
 /*
@@ -318,11 +263,13 @@ div#reading-header {
 #menu
 {
   position: absolute;
-  margin: -100px 0 0 -50px;
+  margin: 10px 0 0 -50px;
+  height: 100%;
   padding: 50px;
-  padding-top: 50px;
-  
-  background: white;
+  padding-left: 50px;
+  z-index: 1;
+  border-right: 1px solid grey;
+  background-color: #FFFFFF;
 
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
