--- a/lute/templates/read/index.html
+++ b/lute/templates/read/index.html
@@ -24,7 +24,7 @@
     <!-- Lacking css skills, so table layout to the rescue. -->
     <table style="width: 100%">
       <tr>
-        <td>
+        <td width="25px">
           <div id="menuToggle">
             <input type="checkbox" />
             <span></span>
@@ -33,20 +33,12 @@
 
             <ul id="menu">
               <li>Home</li>
-              <li>About</li>
-              <li>Info</li>
-              <li>Contact</li>
+              <li>Font size</li>
+              <li>Edit page</li>
+              <li>Keyboard shortcuts</li>
             </ul>
 
           </div>
-        </td>
-        <td width="2px">
-          <img
-            src="{{ url_for('static', filename='img/lute.png') }}"
-            class="lutelogo_small"
-            style="cursor: pointer"
-            onclick="window.location='/'"
-            />
         </td>
         <td align="left">
           <h2 style="margin: 0px">
