--- a/lute/templates/read/index.html
+++ b/lute/templates/read/index.html
@@ -35,9 +35,9 @@
         <li><a href="{{ book.source_uri }}" target="_blank" tabindex="-1">Show source URL</a></li>
         {% endif %}
         <li><a href="" onclick="edit_current_page(); return false;">Edit page</a></li>
+        <li><a id="next_theme" onclick="next_theme(); return false;" title="Next theme">Next theme (m)</a></li>
+        <li><a id="toggle_highlights" onclick="toggle_highlight(); return false;" title="Toggle highlights">Toggle highlights (h)</a></li>
         <li><a id="keyboard_shortcuts" title="Keyboard shortcuts">Keyboard shortcuts</a></li>
-        <li><a id="next_theme" title="Next theme">TODO Next theme</a></li>
-        <li><a id="toggle_highlights" title="Toggle highlights">TODO Toggle highlights</a></li>
       </ul>
 
     </div>
